# key_rec_spectrum

./: LICENCE  README.md
Prog/: Makefile  main.c  poly.c  poly.h  spectrum.c  spectrum.h
SyndAttack/: CMakeLists.txt  build_instance  compile
SyndAttack/include/: code.h  codegen.h  errorgen.h  gathering.h  guess_key.h  model.h  param.h  poly.h  sparse_cyclic.h  spectrum.h  synd_io.h  types.h  weakkeys.h  xoshiro256plusplus.h
SyndAttack/src/: code.c  codegen.c  errorgen.c  gathering.c  guess_key.c  model.c  poly.c  sparse_cyclic.c  spectrum.c  synd_attack.c  synd_io.c  weakkeys.c  xoshiro256plusplus.c
